# velocity

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  PRD.md  README.md  docker-compose.yml  hackathon-research-session.md  hackathon-resources.md  railway.toml  test_frontend.html
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  quick_test.sh  test_backend.py
backend/app/: agent.py  agent.py.bak  config.py  database.py  daytona_manager.py  main.py  models.py  redis_client.py  session_store.py  sse_bridge.py
backend/app/agents/: __init__.py  base_tools.py  definitions.py  linear_tools.py  orchestrator.py  sandbox_runner.py  session_worker.py  session_worker.py.bak
backend/app/agents/prompts/: backlog.md  doc_writer.md  orchestrator.md  prioritization.md  research.md
backend/app/agents/tools/: __init__.py  document_tools.py  linear_tools.py  memory_tools.py  prioritization_tools.py
backend/app/routes/: chat.py  health.py  invites.py  sessions.py
backend/memory/: linear_backlog_report.md  linear_comprehensive_report.md  product-context.md
backend/memory/decisions/: 2024-q4-prioritization.md
backend/memory/feedback/: customer-tier-1.md
backend/memory/templates/: prd-template.md  stakeholder-update.md
backend/tests/: conftest.py  test_chat.py  test_database.py  test_health.py  test_linear_tools.py  test_models.py  test_redis_client.py  test_session_store.py  test_sessions.py
diagrams/: 01-system-overview.mermaid  02-agent-orchestration.mermaid  03-data-flow.mermaid  04-deployment.mermaid  05-mcp-integration-map.mermaid  (+1 more)
(+27 files in other folders)
