[project]
name = "velocity-backend"
version = "0.1.0"
description = "Velocity AI PM Agent — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "anthropic>=0.52.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
